--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ site_description: >-
   DESCRIPTION
 
 # Repository
-repo_name: c17hawke/REPO_NAME
+repo_name: ankitsharma6652/REPO_NAME
 repo_url: https://github.com/ankitsharma6652/REPO_NAME
 
 # Configuration
